tests/baselines/reference/memberOverride.errors.txt
==== tests/cases/compiler/memberOverride.ts (1 errors) ====
    // An object initialiser accepts the first definition for the same property with a different type signature
    // Should compile, since the second declaration of a overrides the first
    var x = {
        a: "", 
        a: 5
        ~~~~
!!! memberOverride.ts(5,5): error TS2000: Duplicate identifier 'a'. Additional locations:
!!! 	memberOverride.ts(4,5)
    }
    
    var n: number = x.a;